// Vitest Snapshot v1

exports[`Vue Api Queries > Get errors from vue component 1`] = `
{
  "$_vueTestUtils_original": [Circular],
  "_Ctor": {},
  "data": [Function],
  "name": undefined,
  "render": [Function],
  "staticRenderFns": [],
  "template": "
      <div>
        <input type=\\"checkbox\\" name=\\"t1\\" class=\\"foo\\" v-model=\\"t1\\" />
        <input type=\\"radio\\" name=\\"t2\\" class=\\"foo\\" value=\\"foo\\" v-model=\\"t2\\"/>
        <input type=\\"radio\\" name=\\"t2\\" class=\\"bar\\" value=\\"bar\\" v-model=\\"t2\\"/>
        <span id=\\"age\\">{{ $errors.first('age') }}</span>
      </div>",
}
`;

exports[`Vue Api Queries > Get plugin installed 1`] = `
<body>
  <div
    data-app="true"
  />
</body>
`;

exports[`Vue Api Queries Get errors from vue component 1`] = `
Object {
  "$_vueTestUtils_original": [Circular],
  "_Ctor": Object {},
  "data": [Function],
  "name": undefined,
  "render": [Function],
  "staticRenderFns": Array [],
  "template": "
      <div>
        <input type=\\"checkbox\\" name=\\"t1\\" class=\\"foo\\" v-model=\\"t1\\" />
        <input type=\\"radio\\" name=\\"t2\\" class=\\"foo\\" value=\\"foo\\" v-model=\\"t2\\"/>
        <input type=\\"radio\\" name=\\"t2\\" class=\\"bar\\" value=\\"bar\\" v-model=\\"t2\\"/>
        <span id=\\"age\\">{{ $errors.first('age') }}</span>
      </div>",
}
`;

exports[`Vue Api Queries Get plugin installed 1`] = `
<body>
  <div
    data-app="true"
  />
</body>
`;
